# stock

./: .gitignore  Dockerfile  pyproject.toml
app/: brand.fm  build_brand_fm.py  dash2.py  dashapp.py  server.py  stock_brand.txt
src/: stock.py
