[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["yoshinori77 <yoshinoriyamashita123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.5"
yahoofinancials = "^1.6"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
TA-Lib = "^0.4.24"
dash = "^2.0.0"
shellinford = "^0.4.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pycodestyle = "^2.8.0"
ipdb = "^0.13.9"
web-pdb = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
